# uv-fast-api

./: README.md  pyproject.toml  pyrightconfig.json
apps/api/: pyproject.toml
apps/api-2/: hello.py  pyproject.toml
apps/api/app/: main.py
apps/api/src/: config.py  main.py
apps/api/src/api/: main.py
apps/api/tests/: test_main.py
bundles/python/: README.md  databricks.yml  pyproject.toml
bundles/python/resources/: python_job.yml  python_pipeline.yml
bundles/python/src/: dlt_pipeline.ipynb  notebook.ipynb
bundles/python/src/python/: main.py
bundles/python/tests/: main_test.py
libs/utils/: pyproject.toml
libs/utils/src/utils/: logging.py
typings/: __builtins__.pyi
typings/dlt/: api.pyi  helpers.pyi
