[project]
name = "vu-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.6",
    "ruff>=0.8.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["apps/api-2"]
