[project]
name = "vu-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "utils",
]

[tool.uv.sources]
utils = { workspace = true }

[dependency-groups]
dev = ["pyright>=1.1.390", "pytest>=8.3.4", "ruff>=0.8.3"]

[tool.uv.workspace]
members = ["apps/api-2", "libs/utils", "apps/api"]
