[project]
name = "vu-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["utils"]

[tool.uv.sources]
utils = { workspace = true }

[dependency-groups]
dev = ["pyright>=1.1.390", "pytest>=8.3.4", "ruff>=0.8.3"]

[tool.uv.workspace]
members = ["apps/api-2", "libs/utils", "apps/api", "bundles/python"]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 120
indent-width = 4


[tool.ruff.lint]
select = ["E", "F", "I", "W", "C", "N", "S", "T"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.pyright]
typeCheckingMode = "strict"
# python.analysis.stubPath = ".vscode"
include = ["./apps/*", "./libs/*", "./bundles/*"]
