[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JEldijk", email = "j.eldijk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
api = "api:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests/**"]