[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "JEldijk", email = "j.eldijk@gmail.com" }]
dependencies = []

[dependency-groups]
dev = [
    "databricks-connect>=16.1.0",
    "databricks-dlt>=0.3.0",
    "databricks-sdk>=0.43.0",
    "pyspark>=3.5.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests/**"]
